refactor: performance optimization