@@ -40,14 +40,14 @@ class RouteServiceTest {
     private RouteService routeService;
 
     private Location istanbul, london, taksim, wembley;
-    private Transportation flight, busToAirport, busFromAirport, uberFromAirport;
+    private Transportation flight, busToAirport, uberToAirport, busFromAirport, uberFromAirport;
 
     @BeforeEach
     void setUp() {
-        taksim = Location.builder().id(1L).name("Taksim").country("Turkey").city("Istanbul").locationCode("TKSM").build();
+        taksim   = Location.builder().id(1L).name("Taksim").country("Turkey").city("Istanbul").locationCode("TKSM").build();
         istanbul = Location.builder().id(2L).name("Istanbul Airport").country("Turkey").city("Istanbul").locationCode("IST").build();
-        london = Location.builder().id(3L).name("London Heathrow").country("UK").city("London").locationCode("LHR").build();
-        wembley = Location.builder().id(4L).name("Wembley").country("UK").city("London").locationCode("CCWEM").build();
+        london   = Location.builder().id(3L).name("London Heathrow").country("UK").city("London").locationCode("LHR").build();
+        wembley  = Location.builder().id(4L).name("Wembley").country("UK").city("London").locationCode("CCWEM").build();
 
         flight = Transportation.builder()
                 .id(10L)
@@ -65,8 +65,16 @@ class RouteServiceTest {
                 .operatingDays(Set.of(1, 2, 3, 4, 5, 6, 7))
                 .build();
 
-        busFromAirport = Transportation.builder()
+        uberToAirport = Transportation.builder()
                 .id(30L)
+                .originLocation(taksim)
+                .destinationLocation(istanbul)
+                .transportationType(TransportationType.UBER)
+                .operatingDays(Set.of(1, 2, 3, 4, 5, 6, 7))
+                .build();
+
+        busFromAirport = Transportation.builder()
+                .id(40L)
                 .originLocation(london)
                 .destinationLocation(wembley)
                 .transportationType(TransportationType.BUS)
@@ -74,7 +82,7 @@ class RouteServiceTest {
                 .build();
 
         uberFromAirport = Transportation.builder()
-                .id(40L)
+                .id(50L)
                 .originLocation(london)
                 .destinationLocation(wembley)
                 .transportationType(TransportationType.UBER)
@@ -82,64 +90,9 @@ class RouteServiceTest {
                 .build();
     }
 
-    @Test
-    void findRoutes_DirectFlight_ShouldReturnOneRoute() {
-        LocalDate date = LocalDate.of(2025, 3, 10);
-
-        when(locationService.findById(anyLong())).thenReturn(new Location());
-        when(transportationRepository.findByOperatingDayWithLocations(1))
-                .thenReturn(List.of(flight));
+    private void mockMapper() {
         when(transportationMapper.toResponse(any(Transportation.class)))
                 .thenReturn(new TransportationResponse());
-
-        List<RouteResponse> routes = routeService.findRoutes(istanbul.getId(), london.getId(), date);
-
-        assertThat(routes).hasSize(1);
-    }
-
-    @Test
-    void findRoutes_WithBeforeAndAfterTransfer_ShouldReturnAllCombinations() {
-        LocalDate date = LocalDate.of(2025, 3, 10);
-
-        when(locationService.findById(anyLong())).thenReturn(new Location());
-        when(transportationRepository.findByOperatingDayWithLocations(1))
-                .thenReturn(List.of(flight, busToAirport, busFromAirport, uberFromAirport));
-        when(transportationMapper.toResponse(any(Transportation.class)))
-                .thenReturn(new TransportationResponse());
-
-        List<RouteResponse> routes = routeService.findRoutes(taksim.getId(), wembley.getId(), date);
-
-        assertThat(routes).hasSize(2);
-    }
-
-    @Test
-    void findRoutes_OnlyBeforeTransfer_ShouldReturnOneRoute() {
-        LocalDate date = LocalDate.of(2025, 3, 10);
-
-        when(locationService.findById(anyLong())).thenReturn(new Location());
-        when(transportationRepository.findByOperatingDayWithLocations(1))
-                .thenReturn(List.of(flight, busToAirport));
-        when(transportationMapper.toResponse(any(Transportation.class)))
-                .thenReturn(new TransportationResponse());
-
-        List<RouteResponse> routes = routeService.findRoutes(taksim.getId(), london.getId(), date);
-
-        assertThat(routes).hasSize(1);
-    }
-
-    @Test
-    void findRoutes_OnlyAfterTransfer_ShouldReturnOneRoute() {
-        LocalDate date = LocalDate.of(2025, 3, 10);
-
-        when(locationService.findById(anyLong())).thenReturn(new Location());
-        when(transportationRepository.findByOperatingDayWithLocations(1))
-                .thenReturn(List.of(flight, busFromAirport));
-        when(transportationMapper.toResponse(any(Transportation.class)))
-                .thenReturn(new TransportationResponse());
-
-        List<RouteResponse> routes = routeService.findRoutes(istanbul.getId(), wembley.getId(), date);
-
-        assertThat(routes).hasSize(1);
     }
 
     @Test
@@ -154,28 +107,135 @@ class RouteServiceTest {
     }
 
     @Test
-    void findRoutes_NoActiveTransportations_ShouldReturnEmpty() {
-        LocalDate date = LocalDate.of(2025, 3, 9);
-
-        when(locationService.findById(anyLong())).thenReturn(new Location());
-        when(transportationRepository.findByOperatingDayWithLocations(anyInt()))
-                .thenReturn(Collections.emptyList());
-
-        List<RouteResponse> routes = routeService.findRoutes(1L, 4L, date);
-
-        assertThat(routes).isEmpty();
-    }
-
-    @Test
-    void findRoutes_NoFlightOnThatDay_ShouldReturnEmpty() {
+    void findRoutes_DirectFlight_ShouldReturnOneRoute() {
         LocalDate date = LocalDate.of(2025, 3, 10);
 
         when(locationService.findById(anyLong())).thenReturn(new Location());
-        when(transportationRepository.findByOperatingDayWithLocations(1))
-                .thenReturn(List.of(busToAirport));
+        when(transportationRepository.findBeforeCandidates(1, istanbul.getId()))
+                .thenReturn(Collections.emptyList());
+        when(transportationRepository.findAfterCandidates(1, london.getId()))
+                .thenReturn(Collections.emptyList());
+        when(transportationRepository.findFlightCandidates(
+                eq(1), eq(Set.of(istanbul.getId())), eq(Set.of(london.getId()))))
+                .thenReturn(List.of(flight));
+        mockMapper();
 
-        List<RouteResponse> routes = routeService.findRoutes(taksim.getId(), london.getId(), date);
+        List<RouteResponse> routes = routeService.findRoutes(
+                istanbul.getId(), london.getId(), date);
+
+        assertThat(routes).hasSize(1);
+        verify(transportationRepository).findFlightCandidates(
+                eq(1), eq(Set.of(istanbul.getId())), eq(Set.of(london.getId())));
+    }
+
+    @Test
+    void findRoutes_WithBeforeTransfer_ShouldReturnOneRoute() {
+        LocalDate date = LocalDate.of(2025, 3, 10);
+
+        when(locationService.findById(anyLong())).thenReturn(new Location());
+        when(transportationRepository.findBeforeCandidates(1, taksim.getId()))
+                .thenReturn(List.of(busToAirport));
+        when(transportationRepository.findAfterCandidates(1, london.getId()))
+                .thenReturn(Collections.emptyList());
+        when(transportationRepository.findFlightCandidates(
+                eq(1),
+                eq(Set.of(taksim.getId(), istanbul.getId())),
+                eq(Set.of(london.getId()))))
+                .thenReturn(List.of(flight));
+        mockMapper();
+
+        List<RouteResponse> routes = routeService.findRoutes(
+                taksim.getId(), london.getId(), date);
+
+        assertThat(routes).hasSize(1);
+    }
+
+    @Test
+    void findRoutes_WithAfterTransfer_ShouldReturnOneRoute() {
+        LocalDate date = LocalDate.of(2025, 3, 10);
+
+        when(locationService.findById(anyLong())).thenReturn(new Location());
+        when(transportationRepository.findBeforeCandidates(1, istanbul.getId()))
+                .thenReturn(Collections.emptyList());
+        when(transportationRepository.findAfterCandidates(1, wembley.getId()))
+                .thenReturn(List.of(busFromAirport));
+        when(transportationRepository.findFlightCandidates(
+                eq(1),
+                eq(Set.of(istanbul.getId())),
+                eq(Set.of(london.getId(), wembley.getId()))))
+                .thenReturn(List.of(flight));
+        mockMapper();
+
+        List<RouteResponse> routes = routeService.findRoutes(
+                istanbul.getId(), wembley.getId(), date);
+
+        assertThat(routes).hasSize(1);
+    }
+
+    @Test
+    void findRoutes_WithBeforeAndAfterTransfer_ShouldReturnAllCombinations() {
+        LocalDate date = LocalDate.of(2025, 3, 10);
+
+        when(locationService.findById(anyLong())).thenReturn(new Location());
+        when(transportationRepository.findBeforeCandidates(1, taksim.getId()))
+                .thenReturn(List.of(busToAirport, uberToAirport));
+        when(transportationRepository.findAfterCandidates(1, wembley.getId()))
+                .thenReturn(List.of(busFromAirport, uberFromAirport));
+        when(transportationRepository.findFlightCandidates(
+                eq(1),
+                eq(Set.of(taksim.getId(), istanbul.getId())),
+                eq(Set.of(london.getId(), wembley.getId()))))
+                .thenReturn(List.of(flight));
+        mockMapper();
+
+        List<RouteResponse> routes = routeService.findRoutes(
+                taksim.getId(), wembley.getId(), date);
+
+        assertThat(routes).hasSize(4);
+    }
+
+    @Test
+    void findRoutes_NoFlights_ShouldReturnEmpty() {
+        LocalDate date = LocalDate.of(2025, 3, 10);
+
+        when(locationService.findById(anyLong())).thenReturn(new Location());
+        when(transportationRepository.findBeforeCandidates(anyInt(), anyLong()))
+                .thenReturn(Collections.emptyList());
+        when(transportationRepository.findAfterCandidates(anyInt(), anyLong()))
+                .thenReturn(Collections.emptyList());
+        when(transportationRepository.findFlightCandidates(anyInt(), anySet(), anySet()))
+                .thenReturn(Collections.emptyList());
+
+        List<RouteResponse> routes = routeService.findRoutes(
+                istanbul.getId(), london.getId(), date);
 
         assertThat(routes).isEmpty();
+        verifyNoInteractions(transportationMapper);
+    }
+
+    @Test
+    void findRoutes_FlightOriginIdSetIncludesBeforeDestinations() {
+        LocalDate date = LocalDate.of(2025, 3, 10);
+
+        when(locationService.findById(anyLong())).thenReturn(new Location());
+        when(transportationRepository.findBeforeCandidates(1, taksim.getId()))
+                .thenReturn(List.of(busToAirport));
+        when(transportationRepository.findAfterCandidates(1, london.getId()))
+                .thenReturn(Collections.emptyList());
+
+        Set<Long> expectedOriginIds = Set.of(istanbul.getId(), taksim.getId());
+        Set<Long> expectedDestIds = Set.of(london.getId());
+
+        when(transportationRepository.findFlightCandidates(
+                eq(1), eq(expectedOriginIds), eq(expectedDestIds)))
+                .thenReturn(List.of(flight));
+        mockMapper();
+
+        List<RouteResponse> routes = routeService.findRoutes(
+                taksim.getId(), london.getId(), date);
+
+        assertThat(routes).hasSize(1);
+        verify(transportationRepository).findFlightCandidates(
+                eq(1), eq(expectedOriginIds), eq(expectedDestIds));
     }
 }
